# alpo

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  resources.qrc
app/src/: main.cpp
app/ui/: info_widget.ui  main_window.ui
docs/: Building.md  CodeStyle.md  ObjectsAndAlgorithms.md
include/: calculator.h  linked_list.h  polynomial.h  red_black_tree.h  stack.h  syntax_error.h  table.h
include/expression_compiler/: expression_compiler.h  postfix_member.h
include/expression_interpreter/: expression_interpreter.h  operation.h
include/lexer/: lexer.h  lexer_token.h
libs/googletest/googletest/src/: gtest.cc
libs/zlib/lib/: zlibstatic.lib
libs/zlib/share/pkgconfig/: zlib.pc
sln/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  alpo.sln
sln/app/: INSTALL.vcxproj  INSTALL.vcxproj.filters  app_alpo.vcxproj  app_alpo.vcxproj.filters
sln/libs/googletest/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  googletest-distribution.sln
sln/libs/googletest/googlemock/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  gmock.sln  gmock.vcxproj  gmock.vcxproj.filters  gmock_main.vcxproj  gmock_main.vcxproj.filters
sln/libs/googletest/googletest/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  gtest.sln  gtest.vcxproj  gtest.vcxproj.filters  gtest_main.vcxproj  gtest_main.vcxproj.filters
sln/src/: INSTALL.vcxproj  INSTALL.vcxproj.filters  alpo.vcxproj  alpo.vcxproj.filters
sln/test/: INSTALL.vcxproj  INSTALL.vcxproj.filters  test_alpo.vcxproj  test_alpo.vcxproj.filters
src/: CMakeLists.txt  polynomial.cpp  table.cpp
src/expression_compiler/: expression_compiler.cpp
src/expression_interpreter/: expression_interpreter.cpp  operation.cpp
src/lexer/: lexer.cpp  lexer_token.cpp
test/: CMakeLists.txt  test_all.cpp  test_expr_compiler.cpp  test_interpreter.cpp  test_lexer.cpp  test_linked_list.cpp  test_main.cpp  test_polynomial.cpp  test_red_black_tree.cpp  test_stack.cpp  test_table.cpp
tools/: allowed_pairs.txt  postfix_rules_generator.py
